# tracklight

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/skills/onboard/: SKILL.md
clients/python/: example.py
clients/python/lighttrack/: __init__.py  client.py
clients/rust/: Cargo.toml
clients/rust/examples/: quickstart.rs
clients/rust/src/: lib.rs
clients/typescript/: example.ts
config/: lighttrack.example.toml  pricing.json
crates/api/: Cargo.toml
crates/api/src/: alerts.rs  auth.rs  benchmarks.rs  billing.rs  datasets.rs  error.rs  events.rs  guards.rs  jobs.rs  limits.rs  main.rs  prices.rs  projects.rs  revenue.rs  rubrics.rs  scores.rs  state.rs
crates/billing/: Cargo.toml
crates/billing/src/: error.rs  lib.rs  polar.rs  registry.rs  stripe.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: customer.rs  error.rs  event.rs  lib.rs  limits.rs  margin.rs  pricing.rs  project.rs  revenue.rs  rubric.rs  score.rs
crates/engine/: Cargo.toml
crates/engine/src/: claude.rs  judge.rs  lib.rs  prompts.rs  providers.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  prompts.rs  read.rs  rpc.rs  schemas.rs  tools.rs
crates/render/: Cargo.toml
crates/render/src/: benchmarks.rs  compare.rs  costs.rs  datasets.rs  events.rs  jobs.rs  lib.rs  limits.rs  margin.rs  md.rs  prices.rs  projects.rs  rubrics.rs  scores.rs
crates/render/tests/: render.rs
crates/runner/: Cargo.toml
crates/runner/src/: bench.rs  billing.rs  cli.rs  compare.rs  dataset.rs  http.rs  main.rs  rubric.rs  schedule.rs  score.rs  serve.rs  util.rs
crates/store-pg/: Cargo.toml
crates/store-pg/src/: lib.rs
crates/store/src/: lib.rs  sqlite.rs
crates/store/src/sqlite/: benchmarks.rs  datasets.rs  events.rs  jobs.rs  mod.rs  prices.rs  projects.rs  revenue.rs  rubrics.rs  scores.rs  tests.rs  util.rs
deploy/cloudrun/: cloudbuild.yaml  deploy.sh
deploy/docker/: Dockerfile
deploy/helm/lighttrack/: Chart.yaml  values.yaml
deploy/helm/lighttrack/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/terraform/: README.md
deploy/terraform/modules/azure/: main.tf  outputs.tf  variables.tf
deploy/terraform/modules/gcp/: main.tf  outputs.tf  variables.tf
docs/: ALERTS.md  ARCHITECTURE.md  BENCHMARK_FRAMEWORK.md  DATA_MODEL.md  DECISIONS.md  PACKAGING.md  ROADMAP.md  SCHEDULING.md
schema/bigquery/: 001_init.sql
schema/postgres/: 001_init.sql
schema/sqlite/: 001_init.sql
