[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/runner",
    "crates/mcp",
    "crates/cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/lighttrack"

[workspace.dependencies]
lighttrack-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

# Declared for the crates that will need them as we evolve (kept out of the
# build until a crate actually depends on them, to keep `cargo build` fast):
#   tokio   = { version = "1", features = ["full"] }
#   axum    = "0.7"
#   tower   = "0.5"
#   rusqlite = { version = "0.32", features = ["bundled"] }
#   reqwest  = { version = "0.12", features = ["json"] }
#   clap     = { version = "4", features = ["derive"] }
#   anyhow   = "1"
