[package]
name = "lighttrack-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack ingest + query REST service (axum). Local box → Cloud Run."

[dependencies]
lighttrack-core.workspace = true
lighttrack-store = { path = "../store" }
lighttrack-store-pg = { path = "../store-pg" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
sha2 = "0.10"
