[package]
name = "lighttrack-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack ingest + query REST service (axum). Local box → Cloud Run."

[dependencies]
lighttrack-core.workspace = true
lighttrack-store = { path = "../store" }
lighttrack-store-pg = { path = "../store-pg" }
lighttrack-store-firestore = { path = "../store-firestore" }
# Reuse the regex PII scrubber for optional content redaction on ingest.
lighttrack-anon = { path = "../anon" }
# Billing-provider webhook verification + normalization (Stripe/Polar).
lighttrack-billing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1"
sha2 = "0.10"
# Outbound HTTP for breach-alert delivery (webhook / ntfy). Default TLS (SChannel/OpenSSL).
reqwest = { version = "0.12", features = ["json"] }
