[package]
name = "lighttrack-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Billing-provider adapters (Stripe/Polar) → normalized RevenueEvents for profit tracking."

[dependencies]
lighttrack-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
