[package]
name = "lighttrack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack operator CLI — query, manage projects/keys/limits, define & trigger benchmarks."

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
lighttrack-core.workspace = true
# Added in Phase 2: clap (derive), reqwest, serde_json, anyhow
