[package]
name = "lighttrack-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack scoring engine — drives `claude -p` as an LLM-as-judge (unbudgeted)."

[dependencies]
lighttrack-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# HTTPS client for provider APIs (Gemini/OpenAI generation). native-tls => SChannel on Windows.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
