[package]
name = "lighttrack-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack MCP server (`lt-mcp`) — query traces/costs/scores/limits from Claude Code."

[[bin]]
name = "lt-mcp"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
lighttrack-render.workspace = true
# http-only blocking client (local API). Add a TLS feature when pointing at Cloud Run.
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking"] }
