[package]
name = "lighttrack-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LightTrack scoring runner (`lt-runner`) — judges events via `claude -p` and posts scores."

[[bin]]
name = "lt-runner"
path = "src/main.rs"

[dependencies]
lighttrack-core.workspace = true
lighttrack-render.workspace = true
lighttrack-billing.workspace = true
lighttrack-engine = { path = "../engine" }
lighttrack-anon = { path = "../anon" }
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive", "env"] }
# `default-tls` so `billing sync` can reach the Stripe HTTPS API (the local API is plain http).
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "default-tls"] }
anyhow = "1"
dotenvy = "0.15"
